# LabPlotter

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  README_KO.md  apply_update.bat  build_windows.bat  launcher.py  pyproject.toml  requirements.txt  rollback_last_update.bat  run_labplotter.bat  update_to_latest.bat  updater.py  version.json
.github/workflows/: tests.yml
labplotter/: __init__.py  app.py  clipboard.py  config.py  i18n.py  models.py  nmr.py  ocr.py  parsers.py  plot_settings.py  plotting.py  processing.py  storage.py  ui.py
patches/: LabPlotter_0.5.0_to_0.5.1.labpatch  LabPlotter_0.5.1_to_0.6.0.labpatch  LabPlotter_0.6.0_to_0.7.0.labpatch  LabPlotter_0.7.0_to_0.7.1.labpatch  LabPlotter_0.7.1_to_0.7.2.labpatch  LabPlotter_0.7.2_to_0.7.3.labpatch  LabPlotter_0.7.3_to_0.7.4.labpatch  LabPlotter_Any_to_0.6.0.labpatch  LabPlotter_Any_to_0.7.0.labpatch  LabPlotter_Any_to_0.7.1.labpatch  LabPlotter_Any_to_0.7.2.labpatch  LabPlotter_Any_to_0.7.3.labpatch  LabPlotter_Any_to_0.7.4.labpatch
tests/: test_core.py  test_updater.py
tools/: __init__.py  make_labpatch.py
updates/: LabPlotter_Latest.labpatch
